tests/parser/constant_err4.mtp
(* constants *)
const test :=10;
floop := 1337;
three := 'Stringify';

(*missing begin statement*)

end
.